--- a/CSS/style.css
+++ b/CSS/style.css
@@ -161,6 +161,7 @@ body {
 	background-color: #ebbb11;
 }
 .iconsHeader {
+	text-align: center;
 	margin: 0 0 10px;
 	font-size: 20px;
 	color: #5094f2;
@@ -218,4 +219,122 @@ body {
 	margin: 0 0 44px;
 	font-size: 15px;
 	color: #979797;
+}
+
+/* Media */
+@media only all and (max-width: 1140px) {
+	.headerWrapper {
+		padding: 0 36px;
+	}
+	.commonWrapper {
+		padding: 0 1vw;
+	}
+	.slideArrowRight {
+		right: 1vw;
+	}
+}
+@media only all and (max-width: 900px) {
+	.iphoneImageWrapper {
+		padding: 3% 0 3% 30px;
+	}
+	.iphoneImageWrapper img {
+		width: 90%;
+	}
+	.bannerImageDescription {
+		padding-top: 30px;
+	}
+	.iconsImageContainer {
+		width: 130px;
+		height: 130px;
+	}
+	.iconsImageContainer img {
+		height: 60%;
+	}
+	.slideArrow {
+		top: 50%;
+	}
+}
+@media only all and (max-width: 640px) {
+	.commonWrapper {
+		padding: 0 5vw;
+	}
+	.headerWrapper {
+		padding: 0 30px;
+	}
+	.headerLogo {
+		font-size: 50px;
+		font-weight: 100;
+	}
+
+	.slideArrow {
+		display: none;
+	}
+	.backgroundBanner {
+		border: none;
+		margin-bottom: 0;
+	}
+	.bannerWrapper {
+		padding: 0;
+	}
+	.bannerHeader {
+		font-size: 31px;
+		margin-bottom: 15px;
+	}
+	.signUpNow {
+		width: 235px;
+		height: 53px;
+		padding: 0 0 0 15px;
+		font-size: 31px;
+		margin-bottom: 30px;
+	}
+	.signUpNow img {
+		margin-right: 15px;
+	}
+	.iphoneImageWrapper {
+		max-width: 223px;
+		margin-right: 65px;
+	}
+	.iphoneImageWrapper img {
+		width: 100%;
+	}
+	.bannerDescription {
+		max-width: 230px;
+		font-size: 23px;
+	}
+
+	.iconsWrapper {
+		flex-direction: column;
+		padding: 0;
+	}
+	.commonIconsContainer {
+		padding: 40px 5vw;
+		max-width: 100%;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		border-bottom: 1px solid #cccccc;
+	}
+	.iconsImageContainer {
+		min-width: 130px;
+		margin-bottom: 0;
+		margin-right: 25px;
+	}
+	.iconsHeader {
+		font-size: 34px;
+	}
+	.iconsDescription {
+		font-size: 19px;
+	}
+	.pencilImageContainer img {
+		width: 56px;
+		height: 81px;
+	}
+	.compImageContainer img {
+		width: 73px;
+		height: 60px;
+	}
+	.shopcartWrapper img {
+		width: 76px;
+		height: 70px;
+	}
 }
